--- a/box-jenkins-method-apple-stock-predict.ipynb
+++ b/box-jenkins-method-apple-stock-predict.ipynb
@@ -64,8 +64,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4f12ab14-70f2-4304-a619-8f09736214bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stationarity_check(ts):\n",
+    "    result = adfuller(ts)\n",
+    "    print(f\"ADF Statistic : {result[0]}\")\n",
+    "    print(f\"p-value:{result[1]}\")\n",
+    "    print(f\"Critical values : {result[4]}\")\n",
+    "\n",
+    "def plot_acf_pacf(ts):\n",
+    "    fig,(ax1,ax2) = plt.subplots(1,2,figsize=(12,4))\n",
+    "    plot_acf(ts,ax=ax1,lags=20)\n",
+    "    plot_acf(ts,ax=ax2,lags=20)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "af1077c8-9bc7-4104-ab8a-b35dbcab61ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_13811/1853554278.py:4: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  stock_data = yf.download(stock_symbol, start=start_date, end=end_date)['Close']\n",
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock_symbol = \"AAPL\"\n",
+    "start_date = \"2015-01-01\"\n",
+    "end_date = \"2023-01-01\"\n",
+    "stock_data = yf.download(stock_symbol, start=start_date, end=end_date)['Close']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c23b187-894b-4d68-84a7-05bb8447768d",
    "metadata": {},
    "outputs": [],
    "source": []
