feat:find the best p,d,q order using aic and bic values

--- a/box-jenkins-method-apple-stock-predict.ipynb
+++ b/box-jenkins-method-apple-stock-predict.ipynb
@@ -287,7 +287,25 @@
    "id": "5496286c-7b6f-4aac-88aa-99931bb52365",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "best_aic = float('inf')\n",
+    "best_bic = float('inf')\n",
+    "best_order = None\n",
+    "\n",
+    "for p in range(3):\n",
+    "    for d in range(2):\n",
+    "        for q in range(3):\n",
+    "            arima_model = ARIMA(log_returns,order=(p,d,q))\n",
+    "            arima_results = arima_model.fit()\n",
+    "\n",
+    "            current_aic = arima_results.aic\n",
+    "            current_bic = arima_results.bic\n",
+    "\n",
+    "            if current_aic<best_aic and current_bic<best_bic:\n",
+    "                best_aic = current_aic\n",
+    "                best_bic = current_bic\n",
+    "                best_order = (p,d,q)"
+   ]
   }
  ],
  "metadata": {
